--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev",
-    "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
     "fmt": "prettier --write ./",
-    "lint": "eslint --ext .ts,.js,.vue ."
+    "lint": "eslint --ext .ts,.js,.vue .",
+    "generate": "node scripts/generate-image.mjs"
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
@@ -18,7 +18,9 @@
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^5.0.0",
     "nuxt": "^3.6.2",
+    "playwright": "^1.36.2",
     "prettier": "^3.0.0",
+    "ts-node": "^10.9.1",
     "typescript": "^5.1.6",
     "vite": "^4.4.4"
   },
